# conan-libxml2

./: .gitlab-ci.yml  README.md  appveyor.yml  build.py  conanfile.py
patches/: CMakeLists.txt  CMakeProjectWrapper.txt  FindLibXml2.cmake  xpath.c.patch
patchs/: CMakeLists.txt  xmlversion.h.patch
